--- a/SRC/Roblox_Sharp.csproj
+++ b/SRC/Roblox_Sharp.csproj
@@ -7,4 +7,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="JSON\Group.Shout.cs" />
+  </ItemGroup>
+
 </Project>
