--- a/SRC/Roblox_Sharp.csproj
+++ b/SRC/Roblox_Sharp.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="JSON\Group.Shout.cs" />
+    <None Include="JSON_Models\Group.Shout.cs" />
   </ItemGroup>
 
 </Project>
