--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,13 +1,15 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: Roblox_Sharp Tests
 
 on:
   push:
-    branches: [ "stable" ]
+    branches: 
+      - stable 
   pull_request:
-    branches: [ "main" ]
+    branches: 
+      - stable
 
 jobs:
   build:
@@ -25,4 +27,4 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test Roblox_SharpTests\bin\Debug\net9.0\Roblox_SharpTests.dll --no-build --verbosity normal
