--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -6,25 +6,31 @@ name: Roblox_Sharp Tests
 on:
   push:
     branches: 
-      - stable 
+      - main 
+      - stable
+    paths:
+    - '**.cs'
+    - '**.csproj'
   pull_request:
     branches: 
+      - main
       - stable
 
+env:
+  DOTNET_VERSION: '9.0.x'
+  
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 9.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
+        dotnet-version: "{DOTNET_VERSION}"
+    
     - name: Test
-      run: dotnet test Roblox_SharpTests\bin\Debug\net9.0\Roblox_SharpTests.dll --no-build --verbosity normal
+      run: dotnet test Roblox_SharpTests.dll
+      shell: cmd.exe
+      working-directory: ./Roblox_SharpTests/bin/Debug/net9.0
+      
