--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,9 +1,11 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: Tests
+
 
 on:
+  workflow_dispatch:
   push:
     branches: 
       - main
@@ -11,6 +13,7 @@ on:
     paths: 
       - '**.cs'
       - '**.csproj'
+      
     
 jobs:
   build:
@@ -23,10 +26,8 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.x
-    - name: Restore dependencies
-      run: dotnet restore ./Roblox_Sharp/SRC/Roblox_Sharp.sln
-    - name: Build
-      run: dotnet build ./Roblox_Sharp/SRC/Roblox_Sharp.sln
+    - name: Build 
+      run: dotnet build ./SRC/Roblox_Sharp.sln
     - name: Test
-      run: dotnet test ./Roblox_Sharp/SRC/Roblox_SharpTests/Roblox_SharpTests.csproj
+      run: dotnet test ./SRC/Roblox_Sharp.sln
       
