--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,8 +26,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.x
-    - name: Build 
-      run: dotnet msbuild ./SRC/Roblox_Sharp.sln
+    - name: Build Project?
+      run: dotnet build ./SRC/Roblox_Sharp.csproj
+    - name: Build Solution
+      run: dotnet build  ./SRC/Roblox_Sharp.sln
     - name: Test
       run: dotnet test ./SRC/Roblox_Sharp.sln
       
