Added Exhaustive tests

--- a/SRC/Roblox_Sharp.csproj
+++ b/SRC/Roblox_Sharp.csproj
@@ -5,10 +5,9 @@
     <Nullable>enable</Nullable>
     <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
     <ImplicitUsings>disable</ImplicitUsings>
+    <Description>Web Wrapper for C# api
+</Description>
+    <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Include="JSON_Models\Group.Shout.cs" />
-  </ItemGroup>
 
 </Project>
