--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,7 +5,9 @@ name: Tests
 
 on:
   workflow_dispatch:
-  pull_request:
+
+  pull_request: 
+    types: [opened,reopened]
     branches: 
       - stable
       - main
