--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
   pull_request: 
-    types: [opened,reopened]
+    types: [opened]
     branches: 
       - stable
       - main
