--- a/.github/workflows/Deserialization.yml
+++ b/.github/workflows/Deserialization.yml
@@ -1,16 +1,11 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
+# Tests Deserialization
 
-name: Tests
+name: Deserialization
 
 on:
   workflow_dispatch:
 
-  pull_request: 
-    types: [opened]
-    branches: 
-      - stable
-      - main
+  push:
     paths: 
     - '**.cs'
     - '**.csproj'
@@ -33,7 +28,6 @@ jobs:
 
       - name: Build Roblox_Sharp Solution
         run:  dotnet build -c Debug Roblox_Sharp.sln
-
         
       - name: Object Functionality Tests
         run: dotnet test -c Debug --no-build --filter Tests=Object
