--- a/.github/workflows/Framework.yml
+++ b/.github/workflows/Framework.yml
@@ -1,5 +1,5 @@
 #Tests functionality of objects and json deserialization
-name: Framework
+name: Framework Functionality
 
 on:
   workflow_dispatch:
@@ -25,7 +25,7 @@ jobs:
         with:
           dotnet-version: "9.0.x"
 
-      - name: Build Roblox_Sharp Solution
+      - name: Build Roblox_Sharp
         run:  dotnet build -c Debug Roblox_Sharp.sln
 
       - name: Object Functionality Tests
