--- a/.github/workflows/Long Integration.yml
+++ b/.github/workflows/Long Integration.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           dotnet-version: "9.0.x"
 
-      - name: Build Roblox_Sharp Solution
+      - name: Build Roblox_Sharp
         run:  dotnet build -c Debug Roblox_Sharp.sln
 
       - name : Long Integration Tests
