--- a/.github/workflows/Framework.yml
+++ b/.github/workflows/Framework.yml
@@ -26,7 +26,7 @@ jobs:
           dotnet-version: "9.0.x"
 
       - name: Build Roblox_Sharp
-        run:  dotnet build -c Debug Roblox_Sharp.sln
+        run:  dotnet build -c Debug Roblox_Sharp.csproj
 
       - name: Object Functionality Tests
         run: dotnet test -c Debug --no-build --filter Tests=Object
