--- a/.github/workflows/Framework.yml
+++ b/.github/workflows/Framework.yml
@@ -30,7 +30,7 @@ jobs:
         run:  dotnet build -c Debug Roblox_Sharp.csproj
 
       - name: Object Functionality Tests
-        run: dotnet test -c Debug --no-build --filter Tests=Object
+        run: dotnet test -c Debug --no-build --filter xUnitTests=Object_Functionality
 
       - name: JSON Deserialization Tests
-        run: dotnet test -c Debug --no-build --filter Tests=Deserialization
+        run: dotnet test -c Debug --no-build --filter xUnitTests=Deserialization
