--- a/.github/workflows/Short Integration.yml
+++ b/.github/workflows/Short Integration.yml
@@ -35,4 +35,4 @@ jobs:
         run:  dotnet build -c Debug Roblox_Sharp.sln
 
       - name: Short Integration Tests
-        run: dotnet test -c Debug --no-build --filter Tests=Integration      
+        run: dotnet test -c Debug --no-build --filter xUnitTests=Integration    
