Mass Framework Refactor

--- a/lib/Roblox_Sharp.csproj
+++ b/lib/Roblox_Sharp.csproj
@@ -14,10 +14,12 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <WarningLevel>9999</WarningLevel>
+    <NoWarn>1701;1702;IDE1006;IDE</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <WarningLevel>9999</WarningLevel>
+    <NoWarn>1701;1702;IDE1006;IDE</NoWarn>
   </PropertyGroup>
 
 </Project>
