--- a/.github/workflows/Short Integration.yml
+++ b/.github/workflows/Short Integration.yml
@@ -18,7 +18,7 @@ defaults:
 
 jobs:
   Build-and-Test:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
