--- a/.github/workflows/Short Integration.yml
+++ b/.github/workflows/Short Integration.yml
@@ -17,7 +17,7 @@ defaults:
         working-directory: "lib"
 
 jobs:
-    Build-and-Test:
+    Short-Integration-Tests:
         runs-on: ubuntu-latest
 
         steps:
@@ -26,8 +26,11 @@ jobs:
               with:
                   dotnet-version: "8.0.x"
 
-            - name: Build Roblox_Sharp
-              run: dotnet build -c Debug Roblox_Sharp.sln
+            - name: Download Roblox_Sharp Artifact
+              uses: actions/download-artifact@v4
+              with:
+                  name: built-project
+                  path: lib/bin/Debug/
 
             - name: Short Integration Tests
               run: dotnet test -c Debug --no-build --filter xUnitTests=Integration
