--- a/.github/workflows/Long Integration.yml
+++ b/.github/workflows/Long Integration.yml
@@ -18,7 +18,7 @@ defaults:
         working-directory: "lib"
 
 jobs:
-    Build-and-Test:
+    Long-Integration-Tests:
         runs-on: ubuntu-latest
 
         steps:
@@ -27,8 +27,11 @@ jobs:
               with:
                   dotnet-version: "8.0.x"
 
-            - name: Build Roblox_Sharp
-              run: dotnet build -c Debug Roblox_Sharp.sln
+            - name: Download Roblox_Sharp Artifact
+              uses: actions/download-artifact@v4
+              with:
+                  name: built-project
+                  path: lib/bin/Debug/
 
             - name: Long Integration Tests
               run: dotnet test -c Debug --no-build --filter xUnitTests=Long_Integration
