--- a/.github/workflows/Short Integration.yml
+++ b/.github/workflows/Short Integration.yml
@@ -23,11 +23,13 @@ jobs:
               with:
                   dotnet-version: "8.0.x"
 
-            - name: Download Roblox_Sharp Artifact
-              uses: actions/download-artifact@v4
+            - name: Download Cached Roblox_Sharp
+              uses: actions/cache@v4
               with:
-                  name: built-project
-                  path: lib/bin/Debug/
+                  path: "**/bin/Debug/"
+                  key: ${{ runner.os }}-build-${{ github.sha }}
+                  restore-keys: |
+                      ${{ runner.os }}-build-
 
             - name: Short Integration Tests
               run: dotnet test -c Debug --no-build --filter xUnitTests=Integration
