--- a/.github/workflows/Web Integration.yml
+++ b/.github/workflows/Web Integration.yml
@@ -14,10 +14,6 @@ on:
     #    - "**.cs"
     #   - "**.csproj"
 
-defaults:
-    run:
-        working-directory: "xUnitTests"
-
 jobs:
     Build:
         runs-on: ubuntu-latest
@@ -35,8 +31,8 @@ jobs:
               with:
                   dotnet-version: "8.0.x"
 
-            - name: Build Tests
-              run: dotnet build xUnitTests.sln
+            - run: dotnet build lib\
+            # - run: dotnet build -c Debug xUnitTests\
             - uses: actions/upload-artifact@v4
               with:
                   name: tests
