--- a/.github/workflows/Web Integration.yml
+++ b/.github/workflows/Web Integration.yml
@@ -36,7 +36,7 @@ jobs:
             - uses: actions/upload-artifact@v4
               with:
                   name: tests
-                  path: bin/Debug/
+                  path: "**/bin/Debug/"
 
     Integration-Tests:
         name: Short Integration Tests
@@ -46,7 +46,7 @@ jobs:
             - uses: actions/download-artifact@v4 # Artifact Downloading
               with:
                   name: tests
-                  path: bin/Debug/
+                  path: "**/bin/Debug/"
             - uses: actions/checkout@v4
             - uses: actions/setup-dotnet@v4
               with:
@@ -67,7 +67,7 @@ jobs:
             - uses: actions/download-artifact@v4
               with:
                   name: tests
-                  path: bin/Debug/
+                  path: "**/bin/Debug/"
 
             - name: Long Integration Tests
               run: dotnet test -c Debug --no-build --filter xUnitTests=Long_Integration
