--- a/.github/workflows/Web Integration.yml
+++ b/.github/workflows/Web Integration.yml
@@ -14,6 +14,10 @@ on:
     #    - "**.cs"
     #   - "**.csproj"
 
+defaults:
+    run:
+        working-directory: "lib"
+
 jobs:
     Integration-Tests:
         name: Short Integration Tests
@@ -32,7 +36,7 @@ jobs:
                       ${{ runner.os }}-build-
 
             - name: Short Integration Tests
-              run: dotnet test -c Debug lib/  --filter xUnitTests=Integration
+              run: dotnet test -c Debug  --filter xUnitTests=Integration
 
     Long-Integration-Tests:
         name: Rate Limitted Integration Tests
@@ -51,4 +55,4 @@ jobs:
                       ${{ runner.os }}-build-
 
             - name: Long Integration Tests
-              run: dotnet test -c Debug lib/ --no-build --filter xUnitTests=Long_Integration
+              run: dotnet test -c Debug --no-build --filter xUnitTests=Long_Integration
