--- a/.github/workflows/Web Integration.yml
+++ b/.github/workflows/Web Integration.yml
@@ -17,9 +17,10 @@ defaults:
 jobs:
     Integration-Tests:
         name: Integration
-
         continue-on-error: true
-
+        concurrency:
+            group: Integration
+            cancel-in-progress: true
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
