--- a/.github/workflows/Web Integration.yml
+++ b/.github/workflows/Web Integration.yml
@@ -3,10 +3,14 @@ name: Web Integration
 
 on:
     workflow_dispatch:
+    pull_request:
+        types: [opened, synchronize, reopened]
+        branches: [main, unstable]
+        paths:
+            - "**.cs"
+            - "**.csproj"
     push:
-        branches:
-            - stable
-            - main
+        branches: [unstable]
         paths:
             - "**.cs"
             - "**.csproj"
