--- a/xUnitTests/xUnitTests.csproj
+++ b/xUnitTests/xUnitTests.csproj
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <Reference Include="Roblox_Sharp">
-      <HintPath>..\lib\bin\Debug\net8.0\Roblox_Sharp.dll</HintPath>
+      <HintPath>..\src\bin\Debug\net8.0\Roblox_Sharp.dll</HintPath>
     </Reference>
   </ItemGroup>
 
