added regions to User

--- a/src/Roblox_Sharp.csproj
+++ b/src/Roblox_Sharp.csproj
@@ -9,7 +9,7 @@
 </Description>
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <DocumentationFile>..\lib\Documentation.xml</DocumentationFile>
+    <DocumentationFile>..\src\Documentation.xml</DocumentationFile>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <Title>$(AssemblyName)</Title>
     <PackageTags>Roblox;Roblox API</PackageTags>
