--- a/src/Roblox_Sharp.csproj
+++ b/src/Roblox_Sharp.csproj
@@ -22,6 +22,9 @@
     <PackageLicenseFile>License</PackageLicenseFile>
     <RepositoryUrl>https://github.com/Bless-04/Roblox_Sharp</RepositoryUrl>
     <PackageProjectUrl>https://github.com/Bless-04/Roblox_Sharp</PackageProjectUrl>
+    <Version>2.0.0</Version>
+    <SignAssembly>True</SignAssembly>
+    <DelaySign>True</DelaySign>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
