--- a/.github/workflows/Web Integration.yml
+++ b/.github/workflows/Web Integration.yml
@@ -30,7 +30,7 @@ jobs:
             - uses: actions/checkout@v4
             - uses: actions/setup-dotnet@v4
               with:
-                  dotnet-version: "8s.x"
+                  dotnet-version: "8.x"
 
             - name: Build Roblox_Sharp
               run: dotnet build
