--- a/.github/workflows/Nuget.yml
+++ b/.github/workflows/Nuget.yml
@@ -2,8 +2,8 @@ name: publish to nuget
 on:
     workflow_dispatch:
     push:
-        branches:
-            - main # Default release branch, may also be named 'master' or 'develop'
+        branches: [main, stable, unstable]
+
 jobs:
     publish:
         name: build, pack & publish
