--- a/.github/workflows/Nuget.yml
+++ b/.github/workflows/Nuget.yml
@@ -2,7 +2,7 @@ name: Nuget Publish
 on:
     workflow_dispatch:
     push:
-        branches: [main, stable]
+        branches: [main, stable, unstable]
 
 jobs:
     publish:
@@ -29,9 +29,6 @@ jobs:
 
                   # Platform target to compile (default is empty/AnyCPU)
                   # BUILD_PLATFORM: x64
-
-                  # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
-                  # VERSION_STATIC: 1.0.0
 
                   # Flag to toggle git tagging, enabled by default
                   TAG_COMMIT: true
